--- a/css/connect.css
+++ b/css/connect.css
@@ -104,51 +104,26 @@ body a
 
 .container
 {
-	width: 750px;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 10%;
-	height: 500px;
+	margin-top: 5px;
 	position: relative;
-	background: 
-}
-
-.left_container
-{
-	position: absolute;
-	border: 10px solid #3B3131;
-	left: 0px;
-	display: inline-block;
-	width: 250px;
-	background-color: #E5E4E2;
-	box-shadow: inset 0px 0px 10px;
-	border-radius: 255px;
-	padding: 20px;
-	margin:0px;
-
-}
-
-.right_container
-{
-	position: absolute;
-	right: 0px;
-	display: inline-block;
 	border-radius: 35px;
 	background-color: #E5E4E2;
 	box-shadow: inset 0px 0px 10px;
-	margin:0px;
 	padding: 2% 0;
-	margin-top: 20px;
+
 }
 
-.right_container label
+
+label
 {
 	cursor: pointer;
 }
 
 
-
-.left_container h1
+h1
 {
 	font-family: "GIMENELL", arial;
 	text-align: center;
