--- a/css/connect.css
+++ b/css/connect.css
@@ -97,7 +97,6 @@ body
 
 .container
 {
-	min-width: 400px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5px;
@@ -105,7 +104,7 @@ body
 	border-radius: 35px;
 	background-color: #E5E4E2;
 	box-shadow: inset 0px 0px 10px;
-	padding: 2% 0;
+	padding: 20px 0;
 
 }
 
@@ -140,7 +139,6 @@ input
 	font-size: 1em;
 	margin-left: auto;
 	margin-right: auto;
-	width: 100%;
 	margin-bottom: 30px;
 }
 
