--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,8 @@ nav li a:hover
 .link_profil button
 {
 	width: 100%;
-	font-size: 1em;
-	padding: 15px 0;
+	font-size: 2em;
+	padding: 30px 0;
 	border: none;
 	color: #ff96d3;
 	background-color: #424242;
@@ -181,7 +181,7 @@ nav li a:hover
 	border-radius: 255px;
 }
 
-#gestion
+#gestion, #photo
 {
 	display: none;
 }
@@ -208,6 +208,7 @@ nav li a:hover
 {
 	display: inline-block;
 	margin: 0px;
+	width: 20%;
 }
 
 .img_sex_profil img
@@ -306,6 +307,7 @@ legend
     -ms-border-radius: 10px;
     -khtml-border-radius: 10px;
     border-radius: 10px;
+    font-size: 1.3em;
 }
 
 .sub
@@ -315,6 +317,7 @@ legend
 	color: white;
 	cursor: pointer;
 	font-weight: bold;
+	font-size: 1.3em;
 }
 
 .sub:hover
@@ -397,13 +400,6 @@ footer
 	cursor: pointer;
 }
 
-.releft
-{
-	width: 305px;
-	height: 500px;
-	display: inline-block;
-	vertical-align: top;
-}
 
 .reright
 {
@@ -413,6 +409,7 @@ footer
 #recherche_avancee, #rencontre_age, #rencontre_pseudo
 {
 	display: none;
+	font-size: 1.5em;
 }
 
 #recherche_avancee select
@@ -424,7 +421,6 @@ footer
 
 #rencontre_pseudo input
 {
-	width: 50%;
 	margin: 20px auto;
 }
 
@@ -469,13 +465,14 @@ footer
 {
 	background-color: black;
 	width: 100%;
+	margin: 35px 0;
 }
 
 #list_recherche tr
 {
 	cursor: pointer;
 	background-color: #424242;
-	padding: 15px 0;
+	padding: 30px 0;
 }
 
 #list_recherche tr:hover
@@ -507,12 +504,12 @@ footer
 
 .reright p
 {
-	width: 100%;
 	text-align: center;
 	background-color: #424242;
-	padding: 20px 0px;
 	border-radius: 10px;
-	margin-top: 10px;
+	padding: 20px;
+	margin: 30px 0;
+	font-size: 1.5em;
 }
 
 #list_recherche img
@@ -533,7 +530,7 @@ footer
 	border: none;
 	margin-bottom: 10px;
 	color: #ff96d3;
-	font-size: 1em;
+	font-size: 1.5em;
 	padding: 20px 0;
 	border-radius: 5px;
 	border: 2px solid black;
@@ -578,6 +575,7 @@ footer
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 	margin-bottom: 20px;
+	font-size: 1.3em;
 }
 
 .msg_container
@@ -695,7 +693,7 @@ footer
 	border: none;
 	margin-bottom: 10px;
 	color: #ff96d3;
-	font-size: 1em;
+	font-size: 1.5em;
 	padding: 20px 0;
 	border-radius: 5px;
 	border: 2px solid black;
@@ -772,4 +770,90 @@ footer
 	text-decoration: none;
 	font-weight: bold;
 	color:#E5E4E2;
+}
+
+#photo
+{
+	overflow: hidden;
+}
+
+.list_img
+{	
+	width: 100%;
+    z-index: "0";
+    -moz-user-select: none; 
+        -khtml-user-select: none; 
+        -webkit-user-select: none; 
+        -o-user-select: none;
+}
+
+#nophoto
+{
+	text-align: center;
+	background-color: #424242;
+	border-radius: 10px;
+	padding: 20px;
+	margin: 30px 0;
+	font-size: 1.5em;
+}
+
+.container_img
+{
+	width: 100%;
+	height: 500px;
+	display: inline-block;
+	vertical-align: top;
+	background-color: black;
+	border: 3px solid black;
+	overflow: hidden;
+}
+
+#photo form
+{
+	background-color: transparent;
+	padding: 0;
+	margin: 0px 3px 0px 3px;
+	display: inline-block;
+	width: 100%;
+
+}
+
+.titre_img
+{
+	padding: 20px 0;
+	text-align: center;
+	font-size:1.5em;
+	background-color: #424242;
+}
+
+.img_del
+{
+	display: inline-block;
+	font-size: 1.3em;
+}
+
+#photo form input
+{
+	display: inline-block;
+	vertical-align: bottom;
+	margin: 0;
+	padding: 40px 0px;
+	width: 100%;
+	cursor: pointer;
+	border: 3px solid black;
+	background-color: #424242;
+	color: #E5E4E2;
+}
+
+#photo form input:hover
+{
+	background-color: #E5E4E2;
+	color: #424242;
+}
+
+.colum_photo
+{
+	display: inline-block;
+	width: 32%;
+	margin-bottom: 25px;
 }
