--- a/css/style.css
+++ b/css/style.css
@@ -207,13 +207,13 @@ nav li a:hover
 .img_sex_profil
 {
 	display: inline-block;
-	margin: 0px;
+	margin-right: 2%;
 	width: 20%;
 }
 
 .img_sex_profil img
 {
-	width: 60%;
+	width: 100%;
 	margin-top: 20px;
 	vertical-align: center;
 	padding-left: 5px;
@@ -229,11 +229,14 @@ nav li a:hover
 	padding-left: 5px;
 	vertical-align: top;
 	width: 70%;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .legend_profil table
 {
 	width: 100%;
+	font-size: 1.2em;
 }
 
 .legend_profil td, .legend_profil th
@@ -260,7 +263,7 @@ form
 	padding: 5px 10px;
 }
 
-form input
+form input, form select
 {
 	display: inline-block;
 	background-color: #FBEFF2;
@@ -352,36 +355,37 @@ footer
 
 .success_alert
 {
-	width: 80%;
+	width: 100%;
 	border: solid green 1px;
 	background-color: #A9F5A9;
 	margin:auto;
-	padding: 0px 10px;
+	padding: 25px 0px;
 	margin-bottom: 10px;
 	border-radius: 5px;
 	cursor: pointer;
+	font-size: 1.3em;
 
 }
 
 .success_alert p
 {
 	margin: 0;
-	padding: 0;
+	padding: 0 10px;
 	display: inline-block;
 	color: green;
 }
 
 .error_alert
 {
-	width: 80%;
+	width: 100%;
 	border: solid red 1px;
 	background-color: #F6CECE;
 	margin:auto;
-	padding: 0px 10px;
+	padding: 25px 0px;
 	margin-bottom: 10px;
 	border-radius: 5px;
-	line-height: 30px;
 	cursor: pointer;
+	font-size: 1.3em;
 
 }
 
@@ -389,7 +393,7 @@ footer
 {
 	display: inline-block;
 	margin: 0;
-	padding: 0;
+	padding: 0 10px;
 	color: red;
 }
 
@@ -493,13 +497,15 @@ footer
 	-moz-border-radius-topright: 10px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
+	vertical-align: middle;
 }
 
 #list_recherche td
 {
-	padding: 15px 3px;
+	padding: 15px 10px;
 	border-bottom: 2px solid black;
 	text-align: center;
+	vertical-align: middle;
 }
 
 .reright p
@@ -514,8 +520,8 @@ footer
 
 #list_recherche img
 {
-	width: 10%;
-	vertical-align: bottom;
+	width: 25%;
+	vertical-align: middle;
 }
 
 #checkbox_pseudo input
@@ -740,12 +746,14 @@ footer
 	color: #E5E4E2;
 	font-size: 1em;
 	min-height: 200px;
+	font-family: "PTN";
 }
 
 #titre_add
 {
 	margin: 10 0px;
 	background-color: #424242;
+	color: #E5E4E2;
 
 }
 
@@ -861,4 +869,9 @@ footer
 #gestion
 {
 	font-size: 1.5em;
+}
+
+.imgcheck
+{
+	width: 10%;
 }
